# nomad-perovskite-solar-cells-database

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  MANIFEST.in  README.md  index.html  main.html  mkdocs.yml  nomad.yaml  pyproject.toml  requirements.txt  requirements_docs.txt  schema.archive.yaml  schema.py
.github/workflows/: actions.yaml  actions.yml  cruft-update.yml  mkdocs-deploy.yml  python-publish.yml  test.yaml  update-synonym-map.yml
docs/: index.md  main.py
docs/explanation/: additives_and_impurities.md  perovskite_composition_schema.md  perovskite_ions_schema.md
docs/how_to/: add_a_new_ion.md  create_a_perovskite_composition.md  download_data.md  explore_the_databases.md  export_and_explore_ion_data_and_structure.md  export_structures.md  install_this_plugin.md  search_for_ions.md  use_this_plugin.md
docs/notebooks/: ions_database  notebooks.md  perla  perla_notebooks
docs/reference/: composition_and_ion_schema.md  solar_cell_schema.md  tandem_schema.md
docs/stylesheets/: extra.css
docs/theme/partials/: header.html
docs/tutorial/: index.md  sharing_a_perovskite_composition.md
explanation/: explanation.html
how_to/: add_a_new_ion.html  contribute_to_the_documentation.html  contribute_to_this_plugin.html  create_a_perovskite_composition.html  download_data.html  explore_the_databases.html  export_a_cation_structure.html  export_structures.html  install_this_plugin.html  search_for_ions.html  use_this_plugin.html
notebooks/: notebooks.html
notebooks/ions_database/: CNH6.xyz  build-perovskite-structure-from-ion-entry.html  query-ion-database-api.html  query-perovskite-composition.html
notebooks/perla_notebooks/: __init__.html  architecture-evolution.html  architecture-evolution.ipynb  crabnet-perovskite-bandgap-prediction.html  crabnet-perovskite-bandgap-prediction.ipynb  diversity-analysis.html  diversity-analysis.ipynb  index.html  ml-distribution-shift-case-study.html  ml-distribution-shift-case-study.ipynb  perla-evals-analysis.html  perla-evals-analysis.ipynb  perla-paperbot-plot.html  perla-paperbot-plot.ipynb  plotly_theme.html  query-perovskite-database.html
perovskite/: __init__.py  nomad_plugin.yaml  schema.py
perovskite/perovskite_parser/: entry_writer.py
perovskite/perovskite_sections/: __init__.py  backcontact.py  cell.py  encapsulation.py  eqe.py  etl.py  htl.py  jv.py  module.py  perovskite.py  ref.py  stability.py  utils.py
perovskite_solar_cell/: nomad_plugin.yaml
perovskite_solar_cell/perovskite_parser/: entry_writer.py
perovskite_solar_cell/perovskite_parser/database/: 42530.archive.json  42531.archive.json  42532.archive.json  42533.archive.json  42534.archive.json  42535.archive.json  42536.archive.json  42537.archive.json  42538.archive.json  42539.archive.json  42540.archive.json  42541.archive.json  42542.archive.json  42543.archive.json  42544.archive.json  42545.archive.json  42546.archive.json  42547.archive.json  42548.archive.json  42549.archive.json  42550.archive.json
perovskite_solar_cell/perovskite_sections/: __init__.py  add.py  backcontact.py  cell.py  encapsulation.py  eqe.py  etl.py  htl.py  jv.py  outdoor.py  perovskite.py  perovskite_deposition.py  ref.py  stabilised.py  substrate.py
perovskite_solar_cell_database/: __init__.py  nomad_plugin.yaml  schema.py
perovskite_solar_cell_database/data_tools/: Perovskite_database.csv  __init__.py  entry_writer.py  eqe_parser.py  jv_parser.py
perovskite_solar_cell_database/data_tools/archive_entries/: 42461.archive.json  42462.archive.json  42463.archive.json  42464.archive.json  42465.archive.json  42466.archive.json  42467.archive.json  42468.archive.json  42469.archive.json  42470.archive.json  42471.archive.json  42472.archive.json  42473.archive.json  42474.archive.json  42475.archive.json  42476.archive.json  42477.archive.json  (+592 more)
perovskite_solar_cell_database/nomad_perovskite_solar_cells_database.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
perovskite_solar_cell_database/perovskite_sections/: jv.py
perovskite_solar_cell_database/schema_sections/: __init__.py  add.py  backcontact.py  cell.py  encapsulation.py  eqe.py  etl.py  formula_normalizer.py  htl.py  jv.py  llm.py  module.py  outdoor.py  perovskite.py  perovskite_deposition.py  ref.py  stabilised.py  stability.py  substrate.py  utils.py  vars.py
reference/: composition_and_ion_schema.html  references.html  solar_cell_schema.html  tandem_schema.html
search/: search_index.json
src/perovskite_solar_cell_database/: __init__.py  composition.py  llm_extraction_schema.py  parser.py  perovskite_composition.py  schema.py  synonym_map.json  utils.py
src/perovskite_tandem_database/: __init__.py  schema.py
stylesheets/: extra.css
synonyms/: find_synonyms.ipynb  generate_synonym_map.py  unique_names_and_methods.json
tandem_solar_cell_database/: __init__.py  nomad_plugin.yaml  schema.py
tandem_solar_cell_database/schema_sections/: __init__.py  layer.py  tandem_device.py
tests/: conftest.py  test_composition.py  test_llm_conversion.py  test_schema.py  test_tandem_parser.py  test_tandem_schema.py
tests/apps/: test_perovskite_ions_app.py  test_solar_cell_app.py  test_solar_perovskite_solar_cell_database_app.py  test_tandem_app.py
tests/data/: 10.1002--adfm.201904856-cell-1.archive.json  Br_perovskite_ion.archive.json  I_perovskite_ion.archive.json  Json_data_tandem_cell_initial_data_0.archive.json  Json_data_tandem_cell_initial_data_522.archive.json  Json_data_tandem_cell_initialdata_0.json  MA_perovskite_ion.archive.json  Pb_perovskite_ion.archive.json  claude-4-sonnet-20250514-10.1002--aenm.201900555-cell-1.archive.json  claude-4-sonnet-20250514-10.1002--aenm.201900555-cell-2.archive.json  composition.archive.yaml  example.archive.json  example_tandem.archive.json  jv_file_hzb.txt  llm.archive.json  perovskite_ions.xlsx  perovskite_ions_reduced.xlsx  tandem_input_sheet.xlsx  tandem_input_sheet_reduced.xlsx  test.archive.yaml  test_tandem_schema.archive.json
tutorial/: index.html  sharing_a_perovskite_composition.html  tutorial.html
(+151 files in other folders)
