[build-system]
requires = [
    "setuptools>=61.0.0",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "nomad-perovskite-solar-cells-database"
dynamic = ["version"]
description = "Perovskite solar cell data schema plugin for NOMAD."
readme = "README.md"
authors = [
    {name = "Jose Marquez", email = "jose.marquez@physik.hu-berlin.de"},
    {name = "Yaru Wang", email = "wangyaru@physik.hu-berlin.de"},
    ]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "nomad-lab>=1.2.1.dev",
    "pytest",
]

[project.license]
file = "LICENSE"

# TODO need to add the correct url
[project.urls]
"Homepage" = "https://github.com/FAIRmat-NFDI/nomad-perovskite-solar-cells-database"

